--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <section class="header">
         <nav class="navbar">
             <a href="index.html">
-                <img src="/Images/logo.png" alt="">
+                <img src="/Musicology-website/Images/logo.png" alt="">
             </a>
             <div class="nav-links">
                 <ul>
