--- a/index.html
+++ b/index.html
@@ -51,21 +51,21 @@
         </div>
         <div class="cards">
             <div class="card">
-                <a href="#"> <img src="/Images/card3.png" alt=""> </a>
+                <a href="#"> <img src="/Musicology-website/Images/card3.png" alt=""> </a>
                 <div class="country">
                     <h2>America</h2>
                     <p>Lorem ipsum dolor,consectetur sit amet adipisicing elit.</p>
                 </div>
             </div>
             <div class="card">
-                <a href="#"> <img src="/Images/card2.png" alt=""> </a>
+                <a href="#"> <img src="/Musicology-website/Images/card2.png" alt=""> </a>
                 <div class="country">
                     <h2>Asia</h2>
                     <p>Lorem ipsum dolor,consectetur sit amet adipisicing elit.</p>
                 </div>
             </div>
             <div class="card">
-                <a href="#"> <img src="/Images/card1.jpg" alt=""> </a>
+                <a href="#"> <img src="/Musicology-website/Images/card1.jpg" alt=""> </a>
                 <div class="country">
                     <h2>Australia</h2>
                     <p>Lorem ipsum dolor,consectetur sit amet adipisicing elit.</p>
@@ -87,7 +87,7 @@
         </div>
         <div class="stamps">
             <div class="stamp">
-                <a href="#"><img src="/Images/page3.png" alt=""></a>
+                <a href="#"><img src="/Musicology-website/Images/page3.png" alt=""></a>
                 <div class="price">
                     <h2>Basic</h2>
                     <p>Lorem ipsum dolor, sit amet adipisicing elit. Quae, quidem.</p>
@@ -95,7 +95,7 @@
                 </div>
             </div>
             <div class="stamp">
-                <a href="#"><img src="/Images/page3.png" alt=""></a>
+                <a href="#"><img src="/Musicology-website/Images/page3.png" alt=""></a>
                 <div class="price">
                     <h2>Proffesional</h2>
                     <p>Lorem ipsum dolor, sit amet adipisicing elit. Quae, quidem.</p>
@@ -103,7 +103,7 @@
                 </div>
             </div>
             <div class="stamp">
-                <a href="#"><img src="/Images/page3.png" alt=""></a>
+                <a href="#"><img src="/Musicology-website/Images/page3.png" alt=""></a>
                 <div class="price">
                     <h2>Ultimate</h2>
                     <p>Lorem ipsum dolor, sit amet adipisicing elit. Quae, quidem.</p>
@@ -118,7 +118,7 @@
     <section class="adance">
         <div class="image">
             <a href="#">
-                <img src="/Images/page4.png" alt="">
+                <img src="/Musicology-website/Images/page4.png" alt="">
             </a>
         </div>
         <div class="all">
@@ -149,7 +149,7 @@
         </div>
         <div class="image">
             <a href="#">
-                <img src="/Images/page5.png" alt="">
+                <img src="/Musicology-website/Images/page5.png" alt="">
             </a>
         </div>
     </section>
